fix color of indicator and controller in white modal + adding class valign

--- a/css/style.css
+++ b/css/style.css
@@ -39,39 +39,31 @@ body::-webkit-scrollbar {
   left: 50%;
   margin-top: -300px;
   margin-left: -415px;	
-  opacity: 0.9;
+  opacity: 0.95;
   margin-bottom: 0px;
-}/*
-.carousel {
-  position: absolute;
-  top: 0;
-  left: 5%;
-  height: 500px;
-  width: 90%;
-}*/
+}
 .carousel-inner{
-    height: 450px;
+    height: 100%;
+    width: 100%;
    overflow-y: auto;
    overflow-x: none;
 }
 .close{
   font-size: 45px;
-  color: #FFFFFF;
+  color: rgba(255, 255, 255, 0.6);
   margin:15px;
   font-weight: 600;
-  text-shadow:none;
-  opacity: 0.7;  
+  text-shadow:none; 
 }
 .close:hover{
-  color: #FFFFFF;
+  color:rgba(255, 255, 255, 1);
   text-shadow:none;
-  opacity: 1;
 }
 .white{
-	color: #22D2CA;
+	color: rgba(34, 210, 202, 0.5);
 }
 .white:hover{
-	color: #22D2CA;
+	color: rgba(34, 210, 202, 1);
 }
 .modal-content{
 	height: 100%;
@@ -106,6 +98,26 @@ background: -ms-linear-gradient(top,  rgba(242,242,242,1) 0%,rgba(255,255,255,1)
 background: linear-gradient(to bottom,  rgba(242,242,242,1) 0%,rgba(255,255,255,1) 33%,rgba(242,242,242,1) 64%,rgba(255,255,255,1) 100%); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f2f2', endColorstr='#ffffff',GradientType=0 ); /* IE6-8 */
 }
+.modal-body{
+  height: 85%;
+  width: 100%;
+  position: absolute;
+  float: none;
+  margin: 0 auto;
+}
+.carousel{
+  width: 100%;
+  height: 100%;
+  padding: 2px;
+}
+.valign{
+  position: relative;
+  top: 42%;
+  transform: translateY(-50%);
+}
+.carousel-inner>.item{
+  height: 100%;
+}
 .carousel-control.right, .carousel-control.left{
   background-image: none;
   top:100%;
@@ -125,8 +137,27 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f2f2', end
 .carousel-indicators li{
     background-color: rgba(255, 255, 255, 0.7);
 }
-.carousel-indicators li:hover, .carousel-indicators .active:hover{
-  opacity: 1;
+.carousel-indicators li:hover{
+  background-color: rgba(244, 161, 135, 1);
+}
+.white li {
+  background-color: rgba(34, 210, 202, 0.7);
+}
+..white li:hover{
+  background-color: rgba(244, 161, 135, 1);
+}
+iframe{
+  border: 4px solid #000;
+  -moz-border-radius: 15px;
+  border-radius: 15px;
+  overflow: hidden;
+  height: 450px;
+  width: 630px;
+  position: absolute;
+  margin-left: -315px;
+  left: 50%;
+  top: 50%;
+  margin-top: -225px;
 }
 .link{
 	cursor: pointer;
